[FIX] hidden content behind fixed navbar

--- a/static/src/css/website.css
+++ b/static/src/css/website.css
@@ -40,3 +40,15 @@ footer {
     background-color: #365192;
     border-color: #334c8a;
 }
+
+@media (max-width: 991px) {
+    body {
+        margin-top:110px;
+    }
+}
+
+@media (min-width: 991px) {
+    body {
+        margin-top:70px;
+    }
+}
